--- a/Project 2/AdvancedTipCalculator/AdvancedTipCalculator/Base.lproj/Main.storyboard
+++ b/Project 2/AdvancedTipCalculator/AdvancedTipCalculator/Base.lproj/Main.storyboard
@@ -1,24 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AdvancedTipCalculator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cE2-46-JBO">
+                                <rect key="frame" x="10.000000000000007" y="231" width="124.66666666666669" height="31"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="Button1Pressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9FW-mG-RsV"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jys-rO-pXN">
+                                <rect key="frame" x="144.66666666666666" y="231" width="124.66666666666666" height="31"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="Button2Pressed:forEvent:" destination="BYZ-38-t0r" eventType="touchUpInside" id="auT-Gy-qxp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xmk-jc-ZnV">
+                                <rect key="frame" x="279.33333333333331" y="231" width="124.66666666666669" height="31"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="Button3Pressed:forEvent:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Uc-2B-GYV"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <constraints>
+                            <constraint firstItem="Jys-rO-pXN" firstAttribute="width" secondItem="cE2-46-JBO" secondAttribute="width" id="2Ei-eP-EiN"/>
+                            <constraint firstItem="xmk-jc-ZnV" firstAttribute="width" secondItem="cE2-46-JBO" secondAttribute="width" id="5WZ-xd-rap"/>
+                            <constraint firstItem="xmk-jc-ZnV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="231" id="7tR-YZ-9fP"/>
+                            <constraint firstItem="Jys-rO-pXN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="231" id="Gu4-d1-Ohq"/>
+                            <constraint firstItem="cE2-46-JBO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="lpI-Jp-l60"/>
+                            <constraint firstItem="Jys-rO-pXN" firstAttribute="leading" secondItem="cE2-46-JBO" secondAttribute="trailing" constant="10" id="mIO-Ha-eGW"/>
+                            <constraint firstItem="xmk-jc-ZnV" firstAttribute="leading" secondItem="Jys-rO-pXN" secondAttribute="trailing" constant="10" id="nM2-6N-jKT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xmk-jc-ZnV" secondAttribute="trailing" constant="10" id="pdL-7j-Tmw"/>
+                            <constraint firstItem="cE2-46-JBO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="231" id="rlw-50-FDq"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="Button1" destination="cE2-46-JBO" id="7tq-Ul-Os6"/>
+                        <outlet property="Button2" destination="Jys-rO-pXN" id="saH-bU-DTr"/>
+                        <outlet property="Button3" destination="xmk-jc-ZnV" id="Szs-ZI-mOR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="132" y="78"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
