Sort Column and direction is being saved in UserDefaults

--- a/Project 2/ContactApp/ContactApp/Base.lproj/Main.storyboard
+++ b/Project 2/ContactApp/ContactApp/Base.lproj/Main.storyboard
@@ -226,22 +226,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26l-lU-kzP">
-                                <rect key="frame" x="28" y="376" width="358" height="144"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="75" translatesAutoresizingMaskIntoConstraints="NO" id="DFZ-B1-2fv">
+                                <rect key="frame" x="47" y="239.5" width="320" height="417.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort Order" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="giB-CZ-dDz">
+                                        <rect key="frame" x="120" y="0.0" width="80.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ekU-yB-Pe1">
+                                        <rect key="frame" x="0.0" y="96" width="320" height="216"/>
+                                    </pickerView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="H3X-i5-AKp">
+                                        <rect key="frame" x="72" y="386.5" width="176.5" height="31"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ascending Sort" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wh-7c-Xef">
+                                                <rect key="frame" x="0.0" y="0.0" width="117.5" height="31"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eaC-jd-wpv">
+                                                <rect key="frame" x="127.5" y="0.0" width="51" height="31"/>
+                                                <connections>
+                                                    <action selector="sortDirectionChanged:" destination="hv4-g0-n19" eventType="valueChanged" id="ccF-I0-Fgf"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4bU-2i-nRO"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="DFZ-B1-2fv" firstAttribute="centerX" secondItem="upp-Ur-55Z" secondAttribute="centerX" id="PP5-Vb-Ift"/>
+                            <constraint firstItem="DFZ-B1-2fv" firstAttribute="centerY" secondItem="upp-Ur-55Z" secondAttribute="centerY" id="X5a-Sp-g7G"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="09H-jY-Cd0"/>
+                    <connections>
+                        <outlet property="ascendingSwitch" destination="eaC-jd-wpv" id="4Wf-zZ-tMH"/>
+                        <outlet property="sortPickerView" destination="ekU-yB-Pe1" id="mAc-vW-qe0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T0I-Wv-zwg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1097" y="819"/>
+            <point key="canvasLocation" x="1095.6521739130435" y="818.97321428571422"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Cwo-gc-GCp">
