--- a/Project 2/ContactApp/ContactApp/Base.lproj/Main.storyboard
+++ b/Project 2/ContactApp/ContactApp/Base.lproj/Main.storyboard
@@ -17,14 +17,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="e7v-VI-rXF">
-                                <rect key="frame" x="157.5" y="54" width="99" height="32"/>
+                                <rect key="frame" x="157.5" y="98" width="99" height="32"/>
                                 <segments>
                                     <segment title="View"/>
                                     <segment title="Edit"/>
                                 </segments>
+                                <connections>
+                                    <action selector="changeEditMode:" destination="BYZ-38-t0r" eventType="valueChanged" id="VKZ-an-7NP"/>
+                                </connections>
                             </segmentedControl>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="GfA-bm-5VO">
-                                <rect key="frame" x="0.0" y="100" width="414" height="713"/>
+                                <rect key="frame" x="0.0" y="144" width="414" height="669"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="7rD-yR-sRA">
                                         <rect key="frame" x="8" y="50" width="394" height="356.5"/>
@@ -159,6 +162,9 @@
                                                         <rect key="frame" x="265.5" y="0.0" width="128.5" height="31"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" title="Change"/>
+                                                        <connections>
+                                                            <segue destination="zoq-Cj-DJu" kind="show" id="Sde-vl-EdR"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
@@ -187,11 +193,52 @@
                             <constraint firstAttribute="trailing" secondItem="GfA-bm-5VO" secondAttribute="trailing" id="w5U-re-9t2"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="v1v-OI-qba"/>
+                    <navigationItem key="navigationItem" title="Contact" id="rQt-DP-Y6T">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="Q5W-HV-qTO"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="addressTextField" destination="Ql8-nb-bnJ" id="syO-xk-ZkQ"/>
+                        <outlet property="cellPhoneTextField" destination="EjT-A2-LBU" id="zGG-PJ-oOJ"/>
+                        <outlet property="changeButton" destination="vk7-rG-6i4" id="h50-jl-FGe"/>
+                        <outlet property="cityTextField" destination="456-Eg-8Zp" id="mEV-pP-k9o"/>
+                        <outlet property="contactTextField" destination="PLk-yh-er6" id="UfJ-HX-ULB"/>
+                        <outlet property="emailTextField" destination="5GR-bp-8rp" id="eO6-V8-9dT"/>
+                        <outlet property="homePhoneTextField" destination="FId-Uw-a5v" id="elg-yr-zNh"/>
+                        <outlet property="scrollView" destination="GfA-bm-5VO" id="bHO-Z9-YFw"/>
+                        <outlet property="segmentControl" destination="e7v-VI-rXF" id="fzZ-a5-UTE"/>
+                        <outlet property="stateTextField" destination="gGD-Jg-SgR" id="vv3-BN-mf2"/>
+                        <outlet property="zipCodeTextField" destination="7ds-GI-r87" id="pJh-EL-l5Z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1018.840579710145" y="-529.01785714285711"/>
+            <point key="canvasLocation" x="1928.985507246377" y="-529.01785714285711"/>
+        </scene>
+        <!--Birthdate Picker-->
+        <scene sceneID="fh6-D6-EM9">
+            <objects>
+                <viewController title="Birthdate Picker" id="zoq-Cj-DJu" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="awt-oq-yLS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="bTy-RI-ZiW">
+                                <rect key="frame" x="0.0" y="183" width="414" height="216"/>
+                            </datePicker>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="cXi-Ud-0YQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bTy-RI-ZiW" firstAttribute="leading" secondItem="cXi-Ud-0YQ" secondAttribute="leading" id="663-Ki-efr"/>
+                            <constraint firstItem="bTy-RI-ZiW" firstAttribute="trailing" secondItem="cXi-Ud-0YQ" secondAttribute="trailing" id="UWi-gN-2HS"/>
+                            <constraint firstItem="bTy-RI-ZiW" firstAttribute="top" secondItem="cXi-Ud-0YQ" secondAttribute="top" constant="95" id="yYQ-qo-Rma"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="c9e-5t-O1Z"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I6N-tx-xab" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2739" y="-532"/>
         </scene>
         <!--Map-->
         <scene sceneID="sLH-fj-KgR">
@@ -201,9 +248,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Maps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HcA-2n-Ytx">
-                                <rect key="frame" x="28" y="376" width="358" height="144"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Map" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Skj-ax-LX1">
+                                <rect key="frame" x="190.5" y="438" width="33.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -211,12 +257,16 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="UrB-PT-Yn0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Skj-ax-LX1" firstAttribute="centerX" secondItem="43o-2E-SAX" secondAttribute="centerX" id="fBm-ve-cYa"/>
+                            <constraint firstItem="Skj-ax-LX1" firstAttribute="centerY" secondItem="43o-2E-SAX" secondAttribute="centerY" id="s2E-aO-GoZ"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="nfA-jR-zhB"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="onf-BD-Svm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1761" y="131"/>
+            <point key="canvasLocation" x="1760.8695652173915" y="130.58035714285714"/>
         </scene>
         <!--Settings-->
         <scene sceneID="MFv-Kl-3pA">
@@ -236,7 +286,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ekU-yB-Pe1">
-                                        <rect key="frame" x="0.0" y="96" width="320" height="216"/>
+                                        <rect key="frame" x="0.0" y="95.5" width="320" height="216"/>
                                     </pickerView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="H3X-i5-AKp">
                                         <rect key="frame" x="72" y="386.5" width="176.5" height="31"/>
@@ -286,7 +336,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="d3C-46-kd9"/>
+                        <segue destination="qJt-o0-5df" kind="relationship" relationship="viewControllers" id="d3C-46-kd9"/>
                         <segue destination="WM8-qQ-xeb" kind="relationship" relationship="viewControllers" id="oRi-28-6Sj"/>
                         <segue destination="hv4-g0-n19" kind="relationship" relationship="viewControllers" id="hhy-iV-hC2"/>
                     </connections>
@@ -294,6 +344,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0WL-i7-DvJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="28.985507246376812" y="69.642857142857139"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="n3F-D8-OUJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qJt-o0-5df" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="v1v-OI-qba"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xg1-gr-SH5">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="maD-kO-4R5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tIr-u0-L4p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1018.840579710145" y="-529.01785714285711"/>
         </scene>
     </scenes>
     <resources>
